--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -12,4 +12,16 @@ spring:
 eureka:
    client:
        service-url:
-          defaultZone: http://eureka-dev.com:7001/eureka/     
+          defaultZone: http://eureka-dev.com:7001/eureka/   
+---
+server:
+    port: 8202
+spring:
+    profiles: test
+    application:
+        name: microservicecloud-config-client
+eureka:
+   client:
+       service-url:
+          defaultZone: http://eureka-dev.com:7001/eureka/           
+    
