--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -5,6 +5,7 @@ spring:
 ---
 server:
     port: 8001
+spring:
     profiles: dev
     application:
         name: microservicecloud-config-dept-client
@@ -39,6 +40,7 @@ info:
 ---
 server:
     port: 8001
+spring:
     profiles: test
     application:
         name: microservicecloud-config-dept-client
